Refactor authentication process and improve user session management

--- a/Core/View/Installer/Redir.html.twig
+++ b/Core/View/Installer/Redir.html.twig
@@ -25,8 +25,7 @@
     <div class="row justify-content-center align-items-center min-vh-100">
         <div class="col-md-6">
             <div class="card shadow">
-                <img src="Core/Assets/Images/installed.png" class="card-img-top" alt="installation-completed"
-                     loading="lazy"/>
+                <img src="Core/Assets/Images/installed.png" class="card-img-top" alt="installation-completed"/>
                 <div class="card-body">
                     <p class="lead text-center mb-4">
                         {{ trans('created-default-admin-account', {'%nick%': initial_user, '%pass%': initial_pass}) }}
