--- a/Core/View/Installer/Redir.html.twig
+++ b/Core/View/Installer/Redir.html.twig
@@ -25,7 +25,7 @@
     <div class="row justify-content-center align-items-center min-vh-100">
         <div class="col-md-6">
             <div class="card shadow">
-                <img src="Core/Assets/Images/installed.png" class="card-img-top" alt="installation-completed"
+                <img src="Core/Assets/Images/installed.png" class="card-img-top m-auto w-50" alt="installation-completed"
                      loading="lazy"/>
                 <div class="card-body">
                     <p class="lead text-center mb-4">
