--- a/Core/View/Master/PanelController.html.twig
+++ b/Core/View/Master/PanelController.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * This file is part of FacturaScripts
- * Copyright (C) 2017-2023 Carlos Garcia Gomez <carlos@facturascripts.com>
+ * Copyright (C) 2017-2025 Carlos Garcia Gomez <carlos@facturascripts.com>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as
@@ -28,7 +28,7 @@
             <div class="col-md-12">
                 {# -- Hidden alternative page info -- #}
                 <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb d-md-none">
+                    <ol class="breadcrumb d-lg-none">
                         <li class="breadcrumb-item">
                             <a href="#">{{ trans(pageData.menu) }}</a>
                         </li>
@@ -53,8 +53,8 @@
         </div>
         <div class="row">
             {# -- Top left buttons -- #}
-            <div class="col-md-8 mb-2">
-                <div class="btn-group">
+            <div class="col-12 col-lg-8 mb-2">
+                <div class="btn-group flex-wrap">
                     <a href="{{ firstView.model.url('list') }}" class="btn btn-sm btn-secondary">
                         <i class="fa-solid fa-list fa-fw" aria-hidden="true"></i>
                         <span class="d-none d-lg-inline-block">{{ trans('all') }}</span>
@@ -84,12 +84,12 @@
                 {% endfor %}
             </div>
             {# -- Top right text -- #}
-            <div class="col-md d-none d-md-inline-block text-end">
+            <div class="col-12 col-lg-4 d-none d-md-block text-lg-end text-center mt-3 mt-lg-0">
                 {% set image = fsc.getImageUrl() %}
                 {% if image is empty %}
-                    <i class="{{ pageData.icon }} fa-3x ps-3 float-end" aria-hidden="true"></i>
+                    <i class="{{ pageData.icon }} fa-3x ps-lg-3 float-lg-end" aria-hidden="true"></i>
                 {% else %}
-                    <img src="{{ image }}" alt="{{ fsc.title }}" class="img-thumbnail ms-3 mb-2 float-end"/>
+                    <img src="{{ image }}" alt="{{ fsc.title }}" class="img-thumbnail ms-lg-3 mb-2 float-lg-end"/>
                 {% endif %}
                 <h1 class="h5 mb-0">{{ trans(pageData.title) }}</h1>
                 {% if fsc.hasData %}
@@ -105,21 +105,21 @@
 {% block body %}
     {% set firstView = fsc.views | first %}
     <div class="container-fluid">
-        <div class="row">
+        <div class="row g-2">
             {# -- Left Panel -- #}
             {% if fsc.views | length > 1 %}
-                <div class="col-lg-2">
+                <div class="col-12 col-lg-auto mb-3 mb-lg-0">
                     {# -- Left tabs -- #}
-                    <div class="nav nav-pills flex-row flex-lg-column pb-3" id="mainTabs" role="tablist">
+                    <div class="nav nav-pills flex-row flex-lg-column pb-3 overflow-x-auto" id="mainTabs" role="tablist" style="white-space: nowrap;">
                         {% for viewName, view in fsc.views %}
                             {% set active = (viewName == fsc.active) ? ' active' : '' %}
                             {% set disable = view.settings.active ? '' : ' disabled' %}
-                            <a class="nav-link{{ active }}{{ disable }}" id="{{ viewName }}-tab" data-bs-toggle="pill"
+                            <a class="nav-link{{ active }}{{ disable }} text-nowrap" id="{{ viewName }}-tab" data-bs-toggle="pill"
                                href="#{{ viewName }}" role="tab" aria-controls="{{ viewName }}" aria-expanded="true">
-                                <i class="{{ view.icon }} fa-fw me-1 d-none d-xl-inline-block"
-                                   aria-hidden="true"></i>{{ view.title }}
+                                <i class="{{ view.icon }} fa-fw me-1 d-none d-lg-inline-block"
+                                   aria-hidden="true"></i><span class="d-inline d-lg-inline">{{ view.title }}</span>
                                 {% if view.count >= 1 and viewName != firstView.getViewName() %}
-                                    <span class='badge bg-secondary mt-lg-1 mb-lg-1 float-lg-end'>{{ view.count }}</span>
+                                    <span class='badge bg-secondary ms-1 mt-lg-1 mb-lg-1 float-lg-end'>{{ view.count }}</span>
                                 {% endif %}
                             </a>
                         {% endfor %}
@@ -127,7 +127,7 @@
                 </div>
             {% endif %}
             {# -- Right Panel -- #}
-            {% set rightPanelClass = (fsc.views | length > 1) ? 'col-lg-10' : 'col' %}
+            {% set rightPanelClass = (fsc.views | length > 1) ? 'col-12 col-lg' : 'col-12' %}
             <div class="{{ rightPanelClass }}">
                 {# -- Tab content -- #}
                 <div class="tab-content" id="mainTabsContent">
