--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -105,8 +105,7 @@
                             {% for includeView in getIncludeViews('MenuTemplate', 'MenuIconBefore') %}
                                 {% include includeView['path'] %}
                             {% endfor %}
-                            <li class="nav-item"
-                                title="{{ trans('search') }}">
+                            <li class="nav-item" title="{{ trans('search') }}">
                                 <a class="nav-link{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}" href="MegaSearch" id="menuIconSearch">
                                     <i class="fa-solid fa-search" aria-hidden="true"></i>
                                 </a>
@@ -119,16 +118,15 @@
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle mr-md-2" href="#" data-bs-toggle="dropdown"
-                                   aria-haspopup="true" aria-expanded="false" id="menuIconUser"
-                                   title="{{ trans('user') }}">
-                                    <i class="fa-solid fa-user-circle fa-fw" aria-hidden="true"></i>
+                                   aria-haspopup="true" aria-expanded="false" id="menuIconUser" title="{{ trans('user') }}">
+                                    <i class="fa-solid fa-user-circle fa-fw me-1" aria-hidden="true"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="user-list">
                                     <a class="dropdown-item" href="{{ fsc.user.url() }}">
-                                        <i class="fa-solid fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
+                                        <i class="fa-solid fa-user-circle fa-fw me-1" aria-hidden="true"></i> {{ fsc.user.nick }}
                                     </a>
                                     <a class="dropdown-item send-email" href="SendMail">
-                                        <i class="fa-solid fa-envelope fa-fw" aria-hidden="true"></i>
+                                        <i class="fa-solid fa-envelope fa-fw me-1" aria-hidden="true"></i>
                                         {{ trans('send-mail') }}
                                     </a>
                                     {% for includeView in getIncludeViews('MenuTemplate', 'MenuIconUser') %}
@@ -136,7 +134,7 @@
                                     {% endfor %}
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{{ asset('login') }}?action=logout&multireqtoken={{ formToken(false) }}">
-                                        <i class="fa-solid fa-door-open fa-fw" aria-hidden="true"></i> {{ trans('logout') }}
+                                        <i class="fa-solid fa-door-open fa-fw me-1" aria-hidden="true"></i> {{ trans('logout') }}
                                     </a>
                                 </div>
                             </li>
