--- a/Core/View/Master/PanelController.html.twig
+++ b/Core/View/Master/PanelController.html.twig
@@ -166,7 +166,7 @@
             <div class="dropdown">
                 <button class="btn btn-sm btn-secondary me-3 dropdown-toggle" type="button" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                    <i class="fa-solid fa-wrench fa-fw" aria-hidden="true"></i>
+                    <i class="fa-solid fa-wrench fa-fw me-1" aria-hidden="true"></i>
                     <span class="d-none d-lg-inline-block">{{ trans('options') }}</span>
                 </button>
                 <div class="dropdown-menu">
@@ -175,7 +175,7 @@
                         {% if view.settings.active and view.columns is not empty %}
                             <a class="dropdown-item"
                                href="EditPageOption?code={{ viewName }}&url={{ firstView.model.url() | url_encode }}">
-                                <i class="{{ view.icon }} fa-fw" aria-hidden="true"></i> {{ view.title }}
+                                <i class="{{ view.icon }} fa-fw me-1" aria-hidden="true"></i> {{ view.title }}
                                 {% if view.settings.customized %}
                                     <i class="fa-solid fa-user-pen ms-2" title="{{ trans('personalized') }}"></i>
                                 {% endif %}
@@ -203,22 +203,21 @@
             {% for key, option in fsc.exportManager.options() %}
                 {% if key != fsc.exportManager.defaultOption() %}
                     <a href="{{ firstView.model.url() }}&action=export&option={{ key }}" class="dropdown-item">
-                        <i class="{{ option.icon }} fa-fw" aria-hidden="true"></i>
+                        <i class="{{ option.icon }} fa-fw me-1" aria-hidden="true"></i>
                         {{ trans(option.description) }}
                     </a>
                 {% endif %}
             {% endfor %}
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#advancedExportModal">
-                <i class="fa-solid fa-tools fa-fw" aria-hidden="true"></i>
-                {{ trans('advanced') }}
+                <i class="fa-solid fa-tools fa-fw me-1" aria-hidden="true"></i> {{ trans('advanced') }}
             </a>
             {% set tools = fsc.exportManager.tools() %}
             {% if tools is not empty %}
                 <div class="dropdown-divider"></div>
                 {% for key, tool in tools %}
                     <a href="{{ tool.link }}" target="_blank" class="dropdown-item">
-                        <i class="{{ tool.icon }} fa-fw" aria-hidden="true"></i>
+                        <i class="{{ tool.icon }} fa-fw me-1" aria-hidden="true"></i>
                         {{ trans(tool.description) }}
                     </a>
                 {% endfor %}
@@ -232,7 +231,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">
-                            <i class="fa-solid fa-tools fa-fw" aria-hidden="true"></i>
+                            <i class="fa-solid fa-tools fa-fw me-1" aria-hidden="true"></i>
                             {{ trans('advanced') }}
                         </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
