--- a/Core/View/Master/PanelControllerBottom.html.twig
+++ b/Core/View/Master/PanelControllerBottom.html.twig
@@ -54,8 +54,8 @@
                                     <li class="nav-item">
                                         {% set active = (viewName == fsc.active) or (fsc.active == firstViewName and contActiveTab == 1) ? ' active' : '' %}
                                         <a href="#{{ viewName }}" class="nav-link{{ active }}{{ disable }}" data-bs-toggle="tab" role="tab" aria-controls="{{ viewName }}">
-                                            <i class="{{ view.icon }}" aria-hidden="true"></i>
-                                            <span>&nbsp;{{ view.title }}</span>
+                                            <i class="{{ view.icon }} fa-fw me-1 d-none d-sm-inline" aria-hidden="true"></i>
+                                            <span>{{ view.title }}</span>
                                             {% if view.count > 0 %}
                                                 <span class="badge bg-secondary">{{ number(view.count, 0) }}</span>
                                             {% endif %}
