--- a/Core/View/Master/PanelControllerTop.html.twig
+++ b/Core/View/Master/PanelControllerTop.html.twig
@@ -108,7 +108,7 @@
                     {% set disable = view.settings.active ? '' : ' disabled' %}
                     <a href="#{{ viewName }}" class="nav-link{{ active }}{{ disable }}" data-bs-toggle="tab" role="tab"
                        aria-controls="{{ viewName }}">
-                        <i class="{{ view.icon }}" aria-hidden="true"></i>
+                        <i class="{{ view.icon }} fa-fw me-1 d-none d-sm-inline" aria-hidden="true"></i>
                         <span>{{ view.title }}</span>
                         {% if view.count > 0 %}
                             <span class="badge bg-secondary">{{ number(view.count, 0) }}</span>
