--- a/Core/View/DocumentStitcher.html.twig
+++ b/Core/View/DocumentStitcher.html.twig
@@ -96,7 +96,7 @@
                         </button>
                         <div class="dropdown-menu dropdown-menu-end">
                             <a class="dropdown-item" href="#" onClick="return selectNone();">
-                                <i class="far fa-square fa-fw"></i> {{ trans('select-none') }}
+                                <i class="fa-regular fa-square fa-fw"></i> {{ trans('select-none') }}
                             </a>
                             <a class="dropdown-item" href="#" onClick="return selectAll();">
                                 <i class="fa-solid fa-square fa-fw"></i> {{ trans('select-all') }}
@@ -262,9 +262,9 @@
                 </div>
                 <div class="col-sm-3 text-end">
                     <p class="small mb-0">
-                        <i class="far fa-calendar-alt fa-fw" aria-hidden="true"></i> {{ doc.fecha }}
+                        <i class="fa-regular fa-calendar-alt fa-fw" aria-hidden="true"></i> {{ doc.fecha }}
                         &nbsp;
-                        <i class="far fa-clock fa-fw" aria-hidden="true"></i> {{ doc.hora }}
+                        <i class="fa-regular fa-clock fa-fw" aria-hidden="true"></i> {{ doc.hora }}
                         <br/>
                         {{ trans('net') }}: {{ money(doc.neto) }}
                         &nbsp;
