--- a/Core/View/Tab/RefundFacturaCliente.html.twig
+++ b/Core/View/Tab/RefundFacturaCliente.html.twig
@@ -135,7 +135,7 @@
                                         </button>
                                         <div class="dropdown-menu dropdown-menu-end">
                                             <a class="dropdown-item" href="#" onClick="return refundNone();">
-                                                <i class="far fa-square fa-fw"></i> {{ trans('select-none') }}
+                                                <i class="fa-regular fa-square fa-fw"></i> {{ trans('select-none') }}
                                             </a>
                                             <a class="dropdown-item" href="#" onClick="return refundAll();">
                                                 <i class="fa-solid fa-square fa-fw"></i> {{ trans('select-all') }}
