--- a/Core/View/DocumentStitcher.html.twig
+++ b/Core/View/DocumentStitcher.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * This file is part of FacturaScripts
- * Copyright (C) 2017-2024 Carlos Garcia Gomez <carlos@facturascripts.com>
+ * Copyright (C) 2017-2025 Carlos Garcia Gomez <carlos@facturascripts.com>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as
@@ -34,7 +34,7 @@
                     <p>{{ trans('group-or-split-p') }}</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row g-2">
                 <div class="col-lg-2 col-sm-6 mb-2">
                     <select name="codserie" class="form-select">
                         <option value="">{{ trans('serie') }}</option>
