--- a/Core/View/Email/NewTemplate.html.twig
+++ b/Core/View/Email/NewTemplate.html.twig
@@ -96,26 +96,33 @@
                         <tr>
                             <td>&nbsp;&nbsp;&nbsp;</td>
                             <td style="padding:10px; text-align:center">
-                                <img class="email-logo" src="{{ emailLogoUrl }}" alt=""/>
+                                {% if company.web is empty %}
+                                    <img class="email-logo" src="{{ emailLogoUrl }}" alt="{{ company.nombrecorto }}"/>
+                                {% else %}
+                                    <a href="{{ company.web }}" style="text-decoration:none">
+                                        <img class="email-logo" src="{{ emailLogoUrl }}" alt="{{ company.nombrecorto }}"/>
+                                    </a>
+                                {% endif %}
+                            </td>
+                            <td>&nbsp;&nbsp;&nbsp;</td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td>&nbsp;&nbsp;&nbsp;</td>
+                            <td style="padding:10px">
+                                <h3 class="company" style="text-align:center; color:#3D67AC; font-size:2em; font-weight:bold">
+                                    {% if company.web is empty %}
+                                        {{ company.nombrecorto }}
+                                    {% else %}
+                                        <a href="{{ company.web }}" style="text-decoration:none">
+                                            {{ company.nombrecorto }}
+                                        </a>
+                                    {% endif %}
+                                </h3>
                             </td>
                             <td>&nbsp;&nbsp;&nbsp;</td>
                         </tr>
                     {% endif %}
-                    <tr>
-                        <td>&nbsp;&nbsp;&nbsp;</td>
-                        <td style="padding:10px">
-                            <h3 class="company" style="text-align:center; color:#3D67AC; font-size:2em; font-weight:bold">
-                                {% if company.web is empty %}
-                                    {{ company.nombrecorto }}
-                                {% else %}
-                                    <a href="{{ company.web }}" style="text-decoration:none">
-                                        {{ company.nombrecorto }}
-                                    </a>
-                                {% endif %}
-                            </h3>
-                        </td>
-                        <td>&nbsp;&nbsp;&nbsp;</td>
-                    </tr>
                     <tr>
                         <td>&nbsp;&nbsp;&nbsp;</td>
                         <td class="container" style="background-color: #FFFFFF; border-radius: 5px; color: black; font-size: 1em; padding:10px">
