--- a/Core/View/Master/PanelController.html.twig
+++ b/Core/View/Master/PanelController.html.twig
@@ -166,7 +166,7 @@
             <div class="dropdown">
                 <button class="btn btn-sm btn-secondary me-3 dropdown-toggle" type="button" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                    <i class="fa-solid fa-wrench fa-fw me-1" aria-hidden="true"></i>
+                    <i class="fa-solid fa-wrench fa-fw" aria-hidden="true"></i>
                     <span class="d-none d-lg-inline-block">{{ trans('options') }}</span>
                 </button>
                 <div class="dropdown-menu">
