--- a/Core/View/Master/PanelController.html.twig
+++ b/Core/View/Master/PanelController.html.twig
@@ -116,7 +116,9 @@
                                href="#{{ viewName }}" role="tab" aria-controls="{{ viewName }}" aria-expanded="true">
                                 <i class="{{ view.icon }} fa-fw me-1 d-none d-lg-inline-block"
                                    aria-hidden="true"></i><span class="d-inline d-lg-inline">{{ view.title }}</span>
-                                {% if view.count >= 1 and viewName != firstView.getViewName() %}
+                                {% if view.count > 1 %}
+                                    <span class='badge bg-secondary ms-1 mt-lg-1 mb-lg-1 float-lg-end'>{{ view.count }}</span>
+                                {% elseif view.count == 1 and viewName != firstView.getViewName() %}
                                     <span class='badge bg-secondary ms-1 mt-lg-1 mb-lg-1 float-lg-end'>{{ view.count }}</span>
                                 {% endif %}
                             </a>
